--- a/index.html
+++ b/index.html
@@ -90,6 +90,51 @@
       <p class="features-text" data-aos="fade-left">With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately eighteen 747 aircraft at full power. Falcon Heavy can lift the equivalent of a fully loaded 737 jetliner—complete with passengers, luggage and fuel—to orbit.</p>
     </div>
   </section>
+<section class="main">
+    <h1 class="title" data-aos="fade-up" data-aos-delay="600">Falcon Heavy</h1>
+    <p class="description" data-aos="fade-up" data-aos-delay="1000">
+      The most powerful operational rocket in the world by a factor of two
+    </p> 
+  </section>
+  <div class="video" data-aos="fade-up" data-aos-delay="1500"></div>
+  <section class="features">
+    <div class="overview">
+      <h2 class="features-title" data-aos="fade-left">Falcon Heavy <br> Overview</h2>
+      <table class="table" data-aos="fade-left">
+        <tr>
+          <td class="table-column">HEIGHT</td>
+          <td class="table-column">70 m / 229.6 ft</td>
+        </tr>
+        <tr>
+          <td class="table-column">DIAMETER</td>
+          <td class="table-column">12.2 m / 39.9 ft</td>
+        </tr>
+        <tr>
+          <td class="table-column">MASS</td>
+          <td class="table-column">1,420,788 kg / 3,125,735 lb</td>
+        </tr>
+        <tr>
+          <td class="table-column">PAYLOAD TO LEO</td>
+          <td class="table-column">63,800 kg / 140,660 lb</td>
+        </tr>
+        <tr>
+          <td class="table-column">PAYLOAD TO GTO</td>
+          <td class="table-column">26,700 kg / 58,860 lb</td>
+        </tr>
+        <tr>
+          <td class="table-column">PAYLOAD TO MARS</td>
+          <td class="table-column">16,800 kg / 37,040 lb</td>
+        </tr>
+      </table>
+      <img src="img/falcon-heavy.png" 
+      alt="rocket" 
+      class="rocket" 
+      data-rellax-speed="14"
+      />
+      <h2 class="features-title" data-aos="fade-left">UNMATCHED <br> PERFORMANCE</h2>
+      <p class="features-text" data-aos="fade-left">With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately eighteen 747 aircraft at full power. Falcon Heavy can lift the equivalent of a fully loaded 737 jetliner—complete with passengers, luggage and fuel—to orbit.</p>
+    </div>
+  </section>
   <footer class="footer">
     <img src="img/logo.svg" alt="logo Space X" class="logo" data-aos="fade-up">
     <nav class="footer-nav" data-aos="fade-up">
